fix main menu  z-index, width. product padding

--- a/assets/styles/mainStyles.css
+++ b/assets/styles/mainStyles.css
@@ -13,6 +13,7 @@ header{
     padding-right: 1em;
     position:fixed;
     width: 99%;
+    z-index: 1;
 }
 .LogoMenuP p{
     color:white;
