--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -76,11 +76,20 @@ form button{
     padding:3em;
 
 }
+.TProductos{
+    width: 80%;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 50px;
+    flex-wrap: wrap;
+}
 .Productos{
     width: 80%;
     display:flex;
     flex-direction: column;
     align-items: center;
+    flex-wrap: wrap;
     
 }
 .Productos h1{
